# MisakaLLM

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  third_party_manifest.toml
consensus/: Cargo.toml
consensus/benches/: check_scripts.rs  parallel_muhash.rs
consensus/client/: Cargo.toml
consensus/client/src/: error.rs  header.rs  optional_header.rs  outpoint.rs  parents.rs
consensus/core/: Cargo.toml
consensus/core/src/: acceptance_data.rs  block.rs  blockhash.rs  coinbase.rs  constants.rs  dns_finality.rs  header.rs  lib.rs  merkle.rs  muhash.rs  network.rs  palw.rs  palw_antispam.rs  palw_audit.rs  palw_mint.rs  palw_premium.rs  palw_probe.rs  palw_pruned_frontier.rs  pow_layer0.rs  pruning.rs  rounding_registry.rs  sign.rs  signature_domains.rs  subnets.rs  trusted.rs  tx.rs
consensus/core/src/api/: counters.rs  mod.rs
consensus/core/src/config/: bps.rs  constants.rs  genesis.rs  mod.rs  params.rs  premine.rs
consensus/core/src/errors/: block.rs  config.rs  consensus.rs  pruning.rs  sync.rs  tx.rs
consensus/core/src/evm/: log_index.rs  mod.rs  state_diff.rs  u256.rs
consensus/core/src/hashing/: header.rs  sighash.rs  tx.rs
consensus/core/src/mass/: mod.rs
consensus/core/src/palw/: da.rs
consensus/core/src/utxo/: utxo_diff.rs  utxo_inquirer.rs
consensus/notify/src/: notification.rs
consensus/pow/: Cargo.toml
consensus/pow/src/: lib.rs
consensus/src/: test_helpers.rs
consensus/src/consensus/: factory.rs  mod.rs  palw_audit.rs  palw_da.rs  palw_demo.rs  palw_mint.rs  palw_probe.rs  services.rs  storage.rs  test_consensus.rs  utxo_set_override.rs
consensus/src/model/services/: reachability.rs  relations.rs  statuses.rs
consensus/src/model/stores/: acceptance_data.rs  accepted_attestations.rs  block_transactions.rs  block_window_cache.rs  children.rs  daa.rs  depth.rs  dns_state.rs  epoch_accumulator.rs  evm.rs  ghostdag.rs  headers.rs  mod.rs  palw.rs  palw_beacon.rs  palw_da.rs  palw_lane_bits.rs  palw_nullifier.rs  palw_overlay_view.rs  palw_paid_work.rs  palw_provider_bonds.rs  palw_pruned_frontier.rs  tips.rs  (+16 more)
consensus/src/pipeline/: deps_manager.rs  monitor.rs
consensus/src/processes/: block_depth.rs  coinbase.rs  difficulty.rs  mod.rs  palw.rs  palw_da.rs  parents_builder.rs  past_median_time.rs  pruning.rs  relations.rs  traversal_manager.rs  window.rs
consensus/tests/: receipt_v3_domain_alignment.rs
consensus/wasm/: Cargo.toml
consensus/wasm/src/: error.rs
crypto/muhash/: Cargo.toml
crypto/muhash/benches/: bench.rs
crypto/muhash/fuzz/: Cargo.toml
crypto/muhash/src/: lib.rs
crypto/txscript/: Cargo.toml
crypto/txscript/benches/: bench.rs
crypto/txscript/errors/: Cargo.toml
crypto/txscript/examples/: kip-10.rs
crypto/txscript/src/: lib.rs  mldsa87_acvp_vectors.json  script_builder.rs  script_class.rs  standard.rs
crypto/txscript/test-data/: script_tests.json
crypto/txscript/tests/: pq_policy.rs
daemon/: Cargo.toml
daemon/src/cpu_miner/: mod.rs
daemon/src/kaspad/: mod.rs
evm-indexer/core/: Cargo.toml
evm-indexer/core/src/: balance.rs  event.rs  lib.rs  store.rs  sync.rs
evm-indexer/service/: Cargo.toml
evm-indexer/service/src/: engine.rs  http.rs  lib.rs  main.rs  node.rs  store.rs
evm-indexer/store-pg/: Cargo.toml
evm-indexer/store-pg/src/: lib.rs
kaspa-evm/: Cargo.toml
kaspa-evm/benches/: state_cost.rs
kaspa-evm/examples/: evm_tx_gen.rs
kaspa-evm/src/: dns_finality.rs  env.rs  executor.rs  flat_backend.rs  hash64.rs  lib.rs  mldsa_verify.rs  precompiles.rs  reconstruct.rs  roots.rs  shielded.rs  sim.rs  snapshot.rs  state.rs  trace.rs  tx.rs  withdraw.rs
kaspa-pq-signer/: Cargo.toml
kaspa-pq-signer/src/: lib.rs  main.rs
kaspa-pq-validator/: Cargo.toml  README.md
kaspa-pq-validator-core/: Cargo.toml
kaspa-pq-validator-core/src/: lib.rs
kaspa-pq-validator/src/: main.rs  palw_da_auto_respond.rs  palw_payload.rs  palw_provider_unbond.rs  palw_submit.rs
kaspa-pq-validator/src/palw_payload/: da.rs  lifecycle.rs
kaspad/: Cargo.toml
kaspad/src/: args.rs  daemon.rs  eth_rpc.rs  lib.rs  main.rs  palw_da_spool.rs  palw_mine_service.rs  validator_service.rs
mil/attest/: Cargo.toml
mil/attest/src/: bundle.rs  cache.rs  lib.rs  nvidia.rs  snp.rs  tdx.rs  vendor.rs  verify.rs
mil/blake2b-air/: Cargo.toml
mil/blake2b-air/src/: lib.rs
mil/blockprobe/: Cargo.toml
mil/blockprobe/src/: main.rs
mil/channel/: Cargo.toml
mil/channel/src/: kem.rs  lib.rs  secure.rs  session.rs  wire.rs
mil/compute-attestor/: Cargo.toml  README.md
mil/compute-attestor/src/: lib.rs  main.rs
mil/core/: Cargo.toml
mil/core/src/: anchor.rs  canary.rs  commit.rs  compute_attest.rs  domains.rs  gov.rs  ident.rs  job.rs  lib.rs  model.rs  padding.rs  palw.rs  palw_canonical.rs  params.rs  receipt.rs
mil/miner/: Cargo.toml
mil/miner/src/: audit.rs  authorization.rs  beacon.rs  da.rs  lib.rs  mining.rs  registration.rs
mil/palw/: Cargo.toml
mil/palw/src/: domains.rs  lib.rs  palw.rs  palw_conformance_gate.rs  palw_determinism.rs  palw_replica.rs  qwen_backend.rs  receipt_v3.rs
mil/palw/test-data/: receipt_da_object_v2_golden_v1.json  receipt_v3_golden_v1.json
misaka-cli/: Cargo.toml  README.md
misaka-cli/src/: bootstrap.rs  config.rs  eth.rs  evm_send.rs  faucet.rs  forward.rs  keys.rs  main.rs  mtp.rs  node.rs  palw_da_spool.rs  prea.rs  pruning_snapshot.rs  setup.rs  setup_ui.html  validator_reader.rs  wallet.rs
misaka-cli/src/setup/: README.md  mod.rs
misaka-dnsseeder/: Cargo.toml
misaka-dnsseeder/src/: main.rs
misaka-endpoints/: Cargo.toml
misaka-endpoints/src/: lib.rs
misaminer/: Cargo.toml
misaminer/src/: main.rs
mtp/: Cargo.toml
mtp/collectors/: Cargo.toml
mtp/collectors/src/: aggregate.rs  collect.rs  lib.rs  manual.rs  store.rs
mtp/service/: Cargo.toml
mtp/service/src/: config.rs  epoch.rs  http.rs  ingest.rs  lib.rs  main.rs  publish.rs  query.rs  registry.rs  store.rs
mtp/src/: ledger.rs  lib.rs  registry.rs  rules.rs  score.rs  settle.rs
pq-miner/: Cargo.toml
pq-miner/src/: main.rs
(+682 files in other folders)
