[package]
name = "kaspa-consensus"
description = "Kaspa consensus library"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# kaspa-pq ADR-0040 P1-6: ML-DSA-87 SIGNING is now needed on a production path — the devnet demo mint
# must produce a real per-block ticket authorization (construction == validation). Previously this was
# dev-only, because only the DNS-overlay test harness signed; the verification side (kaspa-txscript) was
# always a normal dependency.
libcrux-ml-dsa.workspace = true
arc-swap.workspace = true
async-channel.workspace = true
bincode.workspace = true
# kaspa-pq (ADR-0039 §9.3): borsh-decode PALW overlay-tx payloads in the body/utxo
# processor. Promoted from dev-dependencies; the PALW payload types (kaspa-consensus-core)
# derive BorshDeserialize. Inert on every shipped preset (PALW activation fence = u64::MAX).
borsh.workspace = true
crossbeam-channel.workspace = true
faster-hex.workspace = true
futures-util.workspace = true
indexmap.workspace = true
itertools.workspace = true
kaspa-addresses.workspace = true
kaspa-consensus-core.workspace = true
kaspa-consensus-notify.workspace = true
kaspa-consensusmanager.workspace = true
kaspa-core.workspace = true
kaspa-database.workspace = true
kaspa-evm = { workspace = true, optional = true }
kaspa-hashes.workspace = true
kaspa-math.workspace = true
kaspa-merkle.workspace = true
kaspa-muhash.workspace = true
kaspa-notify.workspace = true
kaspa-pow.workspace = true
kaspa-txscript.workspace = true
kaspa-txscript-errors.workspace = true
kaspa-utils.workspace = true
log.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
rayon.workspace = true
rocksdb.workspace = true
secp256k1 = { workspace = true, optional = true }
serde.workspace = true
smallvec.workspace = true
thiserror.workspace = true
tokio.workspace = true

rand = { workspace = true, features = ["small_rng"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[dev-dependencies]
criterion.workspace = true
serde_json.workspace = true
# kaspa-pq ADR-0039 PALW: the deterministic k=2 mock inference backend, for the reward-rail E2E test
# (a k=2 match's leaf drives the real coinbase provider-pair credit). Dev-only; no cycle
# (misaka-mil-provider deps kaspa-consensus-core, not this crate).
misaka-mil-provider = { path = "../mil/provider" }
misaka-mil-core.workspace = true
flate2.workspace = true
rand_distr.workspace = true
kaspa-txscript-errors.workspace = true
kaspa-addresses.workspace = true

[[bench]]
name = "parallel_muhash"
harness = false

[[bench]]
name = "check_scripts"
harness = false
# kaspa-pq PQ-only: this bench signs its fixtures with legacy secp256k1, so it is
# skipped unless `legacy-secp256k1` is enabled (ADR-0019 §14).
required-features = ["legacy-secp256k1"]

[features]
# kaspa-pq PQ-only (ADR-0019 §14): `pq-only` (default) builds the consensus crate
# without secp256k1; `legacy-secp256k1` re-enables the legacy secp256k1 test
# fixtures and propagates to consensus-core + txscript. The release/node build is
# secp-free — enforced by `cargo tree -p kaspa-consensus -e normal`
# (scripts/pq-ci-guard.sh, HARD_SECP_GATE=1).
default = ["pq-only"]
pq-only = []
legacy-secp256k1 = [
    "dep:secp256k1",
    "kaspa-consensus-core/legacy-secp256k1",
    "kaspa-txscript/legacy-secp256k1",
]
html_reports = []
devnet-prealloc = ["kaspa-consensus-core/devnet-prealloc"]
# kaspa-pq Selected-Parent EVM Lane (ADR-0020). Pulls the optional `kaspa-evm`
# executor crate (revm + secp/k256 ecrecover) ONLY here — non-default, so the
# secp-free guard (`cargo tree -e normal`) is unaffected. Twin of the
# `legacy-secp256k1` opt-in.
evm = ["dep:kaspa-evm", "kaspa-consensus-core/evm"]

[lints]
workspace = true
