[package]
name = "kaspa-evm"
description = "kaspa-pq Selected-Parent EVM execution lane (ADR-0020) — revm-backed executor"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

# NOTE: this crate pulls revm (and therefore an EVM secp256k1/k256 ecrecover
# stack). It is an OPTIONAL dependency of `kaspa-consensus`, enabled only by the
# non-default `evm` feature, so the default node build never links it — the
# secp-free guarantee enforced by scripts/pq-ci-guard.sh (`cargo tree -e normal`)
# is unaffected. See ADR-0020 §"PQ-only reconciliation".

[dependencies]
kaspa-consensus-core.workspace = true
kaspa-hashes.workspace = true
# ScriptClass check for the F002 withdraw destination (PQ-only: the synthetic
# UTXO output must be the standard ML-DSA P2PKH class). kaspa-txscript's default
# feature set is pq-only — no secp enters this graph.
kaspa-txscript.workspace = true
kaspa-utils.workspace = true
# F006 SHIELDED_VERIFY precompile: the hash-based shielded-pool / anonymous-claim
# verifier (ADR-0033/0025 L2). Pure/portable (kaspa-hashes + borsh only — no secp,
# no revm), so it keeps the default-node secp-free graph clean.
misaka-mil-shield.workspace = true
# The in-consensus STARK verifier (ADR-0034 §5). Wiring it into F006 is the
# reference→STARK swap; it stays INERT (fail-closed) until the audited §SP-0
# milestone flips both the activation fence and the acceptance policy.
misaka-mil-shield-stark-verify.workspace = true
borsh.workspace = true
# `EvmExecError: Display`, and (load-bearing) forces `derive_more/display` ON for
# the whole graph — alloy-eip7702 0.4.2 (via alloy-consensus/eips) needs it, and
# without it the secp-free node's `--features evm` build fails to compile that
# transitive crate (the kaspa-evm dev-deps were masking it).
derive_more = { version = "1", features = ["display"] }

# EVM execution. Shanghai baseline (no c-kzg/blob precompile); ecrecover uses the
# pure-Rust k256 path (secp256k1 C feature left off).
revm = { version = "14", default-features = false, features = ["std"] }
# Ethereum keccak256 MPT roots (state / storage / tx / receipts) and RLP. Share
# revm's alloy-primitives 0.8.26 (no duplicate primitive types / version skew);
# the `rlp` feature gives `U256`/`B256: Encodable` for account/storage encoding.
alloy-primitives = { version = "0.8", features = ["rlp"] }
alloy-trie = "0.7"
alloy-rlp = "0.3"
# EIP-2718 typed-transaction decode + secp/k256 sender recovery (`k256` enables
# `TxEnvelope::recover_signer`).
alloy-consensus = { version = "0.8", features = ["k256"] }
alloy-eips = "0.8"

[features]
# (audit d5c8993 re-audit, H-02a) STARK-backend activation feature forwarding.
#
# By default this crate links `misaka-mil-shield-stark-verify` with its DEFAULT
# features — i.e. the fail-closed INERT verifier: every STARK-tagged proof returns
# `BackendPending` / `ProofSystemNotActivated`, byte-identical to a node that never
# links the p3 subset. Enabling the real verify back-half is a BUILD-GRAPH step and
# is the FIRST action of the A7 activation runbook (docs/mil-shield-audit-readiness.md
# §7), STRICTLY BEFORE the fence flip. These features forward it up so `kaspad` can
# turn it on without editing this manifest.
#
# `shield-stark-backend` enables the verifier's `stark-backend` feature (the ~29-crate
# p3 verify subset). It COMPILES today (CI job "Activation Feature Graph (H-02)").
#
# `shield-stark-a2-surface` forwards to the verifier's `stark-backend-a2-surface`,
# which registers the A2 statement-surfacing table. This variant DOES NOT COMPILE
# against the workspace-pinned recursion rev without the audit-gated `[patch]`
# override (docs/bench/plonky3-recursion-a2-surfacing.diff, A6-gated) — it is left
# DECLARED but UNBUILDABLE on purpose. That is the intended fail-closed posture:
# enabling A2 acceptance is impossible until the audited patch is pinned by the
# ceremony, so no build can turn it on prematurely.
shield-stark-backend = ["misaka-mil-shield-stark-verify/stark-backend"]
shield-stark-a2-surface = ["misaka-mil-shield-stark-verify/stark-backend-a2-surface"]

[dev-dependencies]
# Build + sign EIP-2718 txs in unit tests (secp keys live only in test deps; the
# secp-free guard checks the default node tree, not kaspa-evm's dev-deps).
alloy-signer = "0.8"
alloy-signer-local = "0.8"
# P1 full-payout harness: ABI-encode register/open/claim + ctor args for the real
# MIL contracts driven through revm (the on-lane JobEscrow claim proof).
alloy-sol-types = "0.8"
# Activation-prep tooling (examples/evm_tx_gen): submit signed txs to a live
# node + poll inclusion status. Dev-only — never in the production tree.
kaspa-grpc-client.workspace = true
kaspa-rpc-core.workspace = true
faster-hex.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
# F003 (mldsa_verify) round-trip tests: generate ML-DSA-87 keypairs + sign under
# the F003 contexts. Same portable verifier kaspa-txscript already depends on.
libcrux-ml-dsa.workspace = true
# P0 (v1-payment gate): verify a REAL mil-core provider receipt through the live
# F003 v0x03 precompile — the exact path JobEscrow.claim() takes on an active
# lane. Dev-only; no dependency cycle (mil-core does not depend on kaspa-evm).
misaka-mil-core.workspace = true
# C-01 R4 measurement (Stage-2 gate): per-block state-cost benchmark (benches/state_cost.rs).
criterion.workspace = true

[[bench]]
name = "state_cost"
harness = false

[lints]
workspace = true
