[package]
name = "kaspad"
description = "Kaspa full node daemon"
keywords = ["kaspa", "blockdag"]
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "kaspad_lib"
crate-type = ["cdylib", "lib"]

[dependencies]
kaspa-alloc.workspace = true # This changes the global allocator for all of the next dependencies so should be kept first

kaspa-addresses.workspace = true
kaspa-addressmanager.workspace = true
kaspa-consensus-core.workspace = true
kaspa-consensus-notify.workspace = true
misaka-endpoints.workspace = true
kaspa-consensus.workspace = true
kaspa-consensusmanager.workspace = true
kaspa-core.workspace = true
kaspa-database.workspace = true
# Ethereum JSON-RPC adapter — only linked under the `evm` feature (keeps the
# default node secp-free; the adapter itself pulls no revm). kaspa-evm provides
# the read-only eth_call/estimateGas simulation behind the adapter.
kaspa-eth-rpc = { workspace = true, optional = true }
kaspa-evm = { workspace = true, optional = true }
kaspa-grpc-server.workspace = true
kaspa-hashes.workspace = true
kaspa-index-processor.workspace = true
kaspa-mining.workspace = true
kaspa-notify.workspace = true
kaspa-p2p-flows.workspace = true
kaspa-p2p-lib.workspace = true
kaspa-p2p-mining.workspace = true
kaspa-perf-monitor.workspace = true
kaspa-pq-validator-core.workspace = true
# kaspa-pq ADR-0039 Phase 6: the PALW beacon commit/reveal payload producer, driven by the
# in-process validator service's beacon-liveness step (default node links it but never runs it
# unless --enable-beacon on a testnet-palw / devnet-palw net).
misaka-palw-miner.workspace = true
kaspa-rpc-core.workspace = true
kaspa-rpc-service.workspace = true
kaspa-txscript.workspace = true
kaspa-utils.workspace = true
kaspa-utils-tower.workspace = true
kaspa-utxoindex.workspace = true
kaspa-wrpc-server.workspace = true

async-channel.workspace = true
async-trait.workspace = true
blake2b_simd.workspace = true
borsh.workspace = true
cfg-if.workspace = true
clap = { workspace = true, features = ["env"]}
dhat = { workspace = true, optional = true }
dirs.workspace = true
faster-hex.workspace = true
futures-util.workspace = true
itertools.workspace = true
libc = "0.2"
libcrux-ml-dsa.workspace = true
log.workspace = true
num_cpus.workspace = true
rand.workspace = true
rayon.workspace = true
rocksdb.workspace = true
serde.workspace = true
sysinfo.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
workflow-log.workspace = true
serde_json.workspace = true

toml = "0.8.10"
serde_with = "3.7.0"

[features]
heap = ["dhat", "kaspa-alloc/heap"]
devnet-prealloc = ["kaspa-consensus/devnet-prealloc"]
semaphore-trace = ["kaspa-utils/semaphore-trace"]
# kaspa-pq Selected-Parent EVM Lane (ADR-0020). Empty in P1; opt-in EVM build
# (revm executor + EVM lane lands in P2). The default build stays secp-free.
evm = ["kaspa-consensus/evm", "kaspa-mining/evm", "kaspa-p2p-flows/evm", "dep:kaspa-eth-rpc", "dep:kaspa-evm"]

[lints]
workspace = true
