[package]
name = "misaka-cli"
description = "Unified MISAKA operator CLI (`misaka`): one user-facing front-end over the node wRPC + EVM JSON-RPC. Tier A = observability (node doctor, evm tx wait/status, evm balance/nonce/estimate-gas)."
publish = false
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "misaka"
path = "src/main.rs"

[dependencies]
kaspa-addresses.workspace = true
kaspa-consensus-core.workspace = true
kaspa-pq-validator-core.workspace = true
misaka-endpoints.workspace = true
kaspa-rpc-core.workspace = true
kaspa-txscript.workspace = true
kaspa-wrpc-client.workspace = true

faster-hex.workspace = true
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
toml.workspace = true
dirs.workspace = true

clap = { workspace = true, features = ["env"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }

# EVM-send track (Tier B). Gated behind a feature so the DEFAULT `misaka` build
# stays secp-free (observability + PQ wallet only); `--features evm-send` pulls
# the secp256k1 stack for EVM key derivation + EIP-1559 signing.
alloy-consensus = { version = "0.8", features = ["k256"], optional = true }
alloy-signer = { version = "0.8", optional = true }
alloy-signer-local = { version = "0.8", optional = true }
alloy-eips = { version = "0.8", optional = true }
alloy-primitives = { version = "0.8", features = ["rlp"], optional = true }
# ABI-encode the executeRoot/executeSession calldata the PREA signer emits.
alloy-sol-types = { version = "0.8", optional = true }
kaspa-bip32 = { workspace = true, features = ["legacy-secp256k1"], optional = true }
# BLAKE2b helpers for the PREA F003 v0x02 root preimage (signer only).
kaspa-hashes = { workspace = true, optional = true }
# Wipe in-memory key/mnemonic buffers on drop (audit M-07).
zeroize = { workspace = true, optional = true }

[features]
evm-send = ["dep:alloy-consensus", "dep:alloy-signer", "dep:alloy-signer-local", "dep:alloy-eips", "dep:alloy-primitives", "dep:alloy-sol-types", "dep:kaspa-bip32", "dep:kaspa-hashes", "dep:zeroize"]

[dev-dependencies]
# Round-trip the PREA signer's F003 v0x02 output through the REAL precompile logic.
kaspa-evm.workspace = true

[lints]
workspace = true
