[package]
name = "kaspa-consensus-core"
description = "Kaspa consensus core"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[features]
# kaspa-pq PQ-only (ADR-0019 §14): `pq-only` (default) builds consensus-core
# without secp256k1; `legacy-secp256k1` re-enables the legacy schnorr signing
# helpers in `sign.rs` (and their secp dep) for legacy wallets / tools / tests.
default = ["pq-only"]
pq-only = []
legacy-secp256k1 = ["dep:secp256k1"]
devnet-prealloc = []
wasm32-sdk = []
# kaspa-pq Selected-Parent EVM Lane (ADR-0020): the EVM execution lane. P1
# declares it EMPTY — the consensus *types* (header EVM roots, block evm_payload)
# are always compiled in and are secp-free. The revm executor + its secp256k1
# dependency are pulled in behind this feature in P2, so the default node build
# stays secp-free (enforced by scripts/pq-ci-guard.sh).
evm = []

[dependencies]
arc-swap.workspace = true
# kaspa-pq Phase 2 PoW (ADR-0007): memory-hard Argon2id Layer-1 (algo_id = 2).
argon2.workspace = true
async-trait.workspace = true
# kaspa-pq Phase 8 (PR-8.3): the Layer 0 PoW finalizer is keyed
# BLAKE2b-512, which `blake2b_simd` already implements natively.
blake2b_simd.workspace = true
borsh.workspace = true
bitflags.workspace = true
cfg-if.workspace = true
faster-hex.workspace = true
futures-util.workspace = true
getrandom.workspace = true
itertools.workspace = true
js-sys.workspace = true
kaspa-addresses.workspace = true
kaspa-core.workspace = true
kaspa-hashes.workspace = true
kaspa-math.workspace = true
kaspa-merkle.workspace = true
kaspa-muhash.workspace = true
kaspa-txscript-errors.workspace = true
kaspa-utils.workspace = true
rand.workspace = true
secp256k1 = { workspace = true, optional = true }
# kaspa-pq Phase 3 PoW (ADR-0007): the compute-only BLAKE2b-512 ∥ SHA3-512
# Layer-1 tag (algo_id = 3) needs SHA3-512 (RustCrypto `sha3`).
sha3.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
smallvec.workspace = true
thiserror.workspace = true
wasm-bindgen.workspace = true
workflow-core.workspace = true
workflow-log.workspace = true
workflow-serializer.workspace = true
workflow-wasm.workspace = true

[dev-dependencies]
criterion.workspace = true
bincode.workspace = true
wasm-bindgen-test.workspace = true
web-sys.workspace = true
# kaspa-pq Phase 4b: deterministic ML-DSA-87 single-key premine generator
# (config::premine::tests::gen_misaka_devnet_premine_key). Mirrors how
# kaspa-txscript declares libcrux-ml-dsa for its ML-DSA test vectors.
libcrux-ml-dsa.workspace = true

[[bench]]
name = "serde_benchmark"
harness = false

[lints]
workspace = true
