[package]
name = "kaspa-pow"
description = "Kaspa proof-of-work"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[features]
# kaspa-pq PQ-only (ADR-0019 §14): the only consumer of kaspa-consensus-client
# (which pulls secp256k1) is the `wasm32-sdk`-gated `wasm` module, so that dep is
# pulled in only with this feature — keeping the native kaspa-consensus tree
# secp-free (`cargo tree -p kaspa-consensus -e normal`).
wasm32-sdk = ["dep:kaspa-consensus-client"]

[dependencies]
js-sys.workspace = true
kaspa-consensus-core.workspace = true
kaspa-consensus-client = { workspace = true, optional = true }
kaspa-hashes.workspace = true
kaspa-math.workspace = true
kaspa-utils.workspace = true
wasm-bindgen.workspace = true
workflow-wasm.workspace = true
num.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "bench"
harness = false

[lints]
workspace = true
